test/fail/generated/test_operator_min/test_data_set_0/output_0.pb
J0ЯHдЅЩЂц=ј@Ѕѕ!0vѕС4™ї‹ЧbїBмxї©JAїијAЮЅ­шЖѕемcї